# cmake-deps-example-grpc

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
dependencies/: CMakeLists.txt
dependencies/openssl/: CMakeLists.txt
main/: CMakeLists.txt
